<resources>

    <string name="app_name">FlashDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Flash Droid</string>
    <string name="study">Study</string>
    <string name="manage">Manage Cards</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="title_activity_study">Study</string>
    <string name="title_activity_manager">Manager</string>
    <string name="decks"><u>Decks</u></string>
    <string name="term">Term</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="total_time">Total Time:</string>
    <string name="total_flips">Total Flips:</string>
    <string name="total_cards_viewed">Total Cards Viewed:</string>
    <string name="decks_used">Decks Used:</string>
    <string name="addDeck">Add A Deck</string>
    <string name="title_activity_add_deck">Add A Deck</string>
    <string name="new_deck"><u>New Deck</u></string>
    <string name="deck_name">Name</string>
    <string name="save_deck">Save</string>
    <string name="title_activity_manage_cards">Manage Cards</string>
    <string name="cards">Cards</string>
    <string name="title_activity_add_card">Add A Card</string>
    <string name="definition">Definition</string>
    <string name="studyLabel">Study</string>
    <string name="manageLabel">Manage</string>
    <string name="statisticsLabel">Statistics</string>
    <string name="settingsLabel">Settings</string>
    <string name="title_activity_edit_deck">Edit A Deck</string>
    <string name="edit_deck"><u>Edit Deck</u></string>
    <string name="next">Next</string>
    <string name="flip">Flip</string>
    <string name="timer_length">Study Session Timer:</string>
    <string name="random_background_color">Random Color Scheme:</string>
    <string name="flip_timeout">Time Until Auto-Flip:</string>
    <string name="statHeader"><u>Statistics By Date</u></string>
    <string name="title_activity_edit_card">Edit A Card</string>
    <string name="add_card">Add A Card</string>
    <string name="title_activity_select_deck_to_study">Study</string>
    <string name="select_a_deck"><u>Select A Deck</u></string>
    <string name="defaultTime">0:00</string>
    <string name="timeRemaining">Time Remaining:</string>
    <string name="statisticsDeckName">Deck Name:</string>
    <string name="totalTime">Total Time Taken:</string>
    <string name="numReflips">Number of Reflips:</string>
    <string name="numCards">Number of Cards Used:</string>
    <string name="title_activity_statistics_breakdown">Statistics Breakdown</string>
    <string name="done">Done</string>
    <string name="new_card"><u>New Card</u></string>
    <string name="edit_card"><u>Edit Card</u></string>

</resources>