<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/addDeckHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/new_deck"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:context=".AddDeckActivity" />

    <EditText
        android:id="@+id/deckNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addDeckHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/deck_name"
        android:inputType="text" />

    <Button
        android:id="@+id/saveDeck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="saveDeck"
        android:text="@string/save_deck" />

</RelativeLayout>
