<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/cardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="@string/numCards"
        android:textColor="#333333"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/reflipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardText"
        android:layout_below="@+id/cardText"
        android:layout_marginTop="16dp"
        android:text="@string/numReflips"
        android:textColor="#333333"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/totalTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardText"
        android:layout_alignLeft="@+id/cardText"
        android:layout_marginBottom="14dp"
        android:text="@string/total_time"
        android:textColor="#333333"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/deckName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalTimeText"
        android:layout_alignLeft="@+id/totalTimeText"
        android:layout_marginBottom="16dp"
        android:text="@string/statisticsDeckName"
        android:textColor="#333333"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/deckValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deckName"
        android:layout_alignBottom="@+id/deckName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text=""
        android:textColor="#333333"
        android:textSize="18dp" />
    
    <TextView
        android:id="@+id/totalTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalTimeText"
        android:layout_alignBottom="@+id/totalTimeText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text=""
        android:textColor="#333333"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/cardStatValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cardText"
        android:layout_alignBottom="@+id/cardText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text=""
        android:textColor="#333333"
        android:textSize="18dp" />
    
    <TextView
        android:id="@+id/reflipStatArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reflipText"
        android:layout_alignBottom="@+id/reflipText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text=""
        android:textColor="#333333"
        android:textSize="18dp" />

    <Button
        android:id="@+id/statsDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/done"
        android:onClick="saveCard" />
</RelativeLayout>