<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/term"
        android:textSize="35dp"
        tools:context=".StudyActivity" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="77dp"
        android:layout_toRightOf="@+id/textView1"
        android:width="80dp"
        android:height="80dp"
        android:src="@drawable/ic_arrow_right"
        android:contentDescription="@string/next" />

    <ImageButton
        android:id="@+id/flipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/nextButton"
        android:layout_toLeftOf="@+id/textView1"
        android:width="80dp"
        android:height="80dp"
        android:src="@android:drawable/ic_menu_rotate"
        android:contentDescription="@string/flip" />

    <TextView
        android:id="@+id/flipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/flipButton"
        android:layout_below="@+id/flipButton"
        android:layout_marginLeft="12dp"
        android:text="@string/flip"
        android:textColor="#333"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/nextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nextButton"
        android:layout_below="@+id/flipButton"
        android:layout_marginLeft="9dp"
        android:text="@string/next"
        android:textColor="#333"
        android:textSize="20dp" />

</RelativeLayout>